<resources>
    <string name="app_name">Healthy Diet</string>
    <string name="full_name1">full name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_age">Age  required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>

    <string name="Quotes">\" BE CAREFUL ABOUT READING HEALTH BOOKS. YOU MAY DIE OF A MISPRINT. \"</string>
    <string name="Quote2">\" Eat right, exercise regularly, die anyway.\"</string>

    <array name="weightunits">
        <item>Kg</item>
        <item>lbs</item>
    </array>

    <array name="heightunits">
        <item>cm</item>
        <item>inch</item>
    </array>

    <array name="SEX">
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="PalLevel">
        <item>Extremly Inactive (Patient)</item>
        <item>Sedentery (Little excercise)</item>
        <item>Moderatly Active(Concious person)</item>
        <item>Strongly Active(Laborious worker)</item>
        <item>Extremly active (Professional Athlete)</item>
    </array>


    <string name="option1">Take a Tour</string>
    <string name="option2">CalCulate Calories</string>
    <string name="option3">KCAL</string>
    <string name="option4">FOOD MENU</string>
    <string name="option5">HISTORY</string>
    <string name="option6">PAL</string>
    <string name="option7">LOGIN</string>
    <string name="option8">REGISTER</string>

    <string name="under">Under Construction</string>


    <string name="nv">open</string>
    <string name="nn">close</string>


    <string name="varsity">Dept. Of Computer Science and Engineering, Jashore University of Science and Technology.</string>


</resources>
