<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="2"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="#fcfcfc"
    android:layout_height="match_parent"
    tools:context=".UserView">

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/Bmiutton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/back2"
                    android:padding="10dp"
                    android:src="@drawable/bmi"
                    android:layout_width="75dp"
                    android:layout_height="75dp" />


                <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/circuclebackgroudpurple"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="@string/option1"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>



        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/BMRcardviewID"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/back2"
                    android:padding="10dp"
                    android:src="@drawable/bmr"
                    android:layout_width="75dp"
                    android:layout_height="75dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:text="You can Calculate Calories here"
                    />


                <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/purple"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="@string/option2"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>


        </android.support.v7.widget.CardView>


    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/SignIn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/back1"
                    android:padding="10dp"
                    android:src="@drawable/login"
                    android:layout_width="75dp"
                    android:layout_height="75dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login Here"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="15sp"
                    />


                <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="@string/option7"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>




        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/signup"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/back1"
                    android:padding="10dp"
                    android:src="@drawable/register" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:text="New User? Tap here"
                        />

                <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/purple"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="@string/option8"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</LinearLayout>