<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="4"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="#fcfcfc"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/Bmiutton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circuclebackgroudpurple"
                    android:padding="10dp"
                    android:src="@drawable/bmi"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />


                <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/circuclebackgroudpurple"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="@string/option1"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/BMRcardviewID"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circulebackgroundyellow"
                    android:padding="10dp"
                    android:src="@drawable/bmr"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />


                <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/yellow"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="@string/option2"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/KCALcardviewID"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circulebackgroundpink"
                    android:padding="10dp"
                    android:src="@drawable/kcl"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />

                <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/silver"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="@string/option3"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/FoodsuggestcardviewID"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circulebackgroundgreen"
                    android:padding="10dp"
                    android:src="@drawable/food_suggest"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />

                <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/purple"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="@string/option4"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/HistoryBtn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView

                    android:background="@drawable/circulebackgroudblue"
                    android:padding="10dp"
                    android:src="@drawable/history"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />

                <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blue"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="@string/option5"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/PALcardviewID"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circuclebackgroudpurple"
                    android:padding="10dp"
                    android:src="@drawable/pal"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />

                <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/green"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="@string/option6"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/UpdateProfile"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:padding="10dp"
                    android:src="@drawable/updateprofile"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />

                <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blue"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="Update Profile"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/Logout"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circulebackgroudblue"
                    android:padding="10dp"
                   android:src="@drawable/logout"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />

                <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/green"
                    />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="Logout"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>